--- a/test/custom-serilog-formatter.test/custom-serilog-formatter.test.csproj
+++ b/test/custom-serilog-formatter.test/custom-serilog-formatter.test.csproj
@@ -17,12 +17,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.DotNet.InternalAbstractions" Version="1.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0-beta5-build1225" />
     <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
-    <PackageReference Include="xunit" Version="2.2.0-beta5-build3474" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1-rc2-build3844" />
+    <PackageReference Include="xunit" Version="2.3.1-rc2-build3844" />
     <PackageReference Include="Moq" Version="4.7.142" />
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="1.1.1" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1-rc2-build3844" />
   </ItemGroup>
 
 </Project>
